<resources>
    <string name="app_name">Kinematics Calculator</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="toolbar_help">help</string>

    <string name="name_kinematics_forward">Forward Kinematics </string>
    <string name="name_kinematics_inverse">Inverse Kinematics</string>
    <string name="name_change_language">Change Language</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="list_header_lp">i</string>

    <string name="list_header_alpha">α</string>
    <string name="list_header_a">a</string>
    <string name="list_header_theta">Θ</string>
    <string name="list_header_d">d</string>

    <string name="cartesian_manipulator">Cartesian manipulator</string>
    <string name="anthropomorphic_manipulator">Anthropomorphic manipulator</string>
    <string name="cylindrical_manipulator">Cylindrical manipulator</string>
    <string name="spherical_manipulator">Spherical manipulator</string>
    <string name="scara_manipulator">SCARA manipulator</string>

    <string name="add_join">Add Join</string>
    <string name="add_effector">Add Effector</string>
    <string name="undo">Undo</string>
    <string name="nav_header_basic_kinematics_structure">Basic Kinematics Structure</string>


    <string name="help_menu">Kalkulator służy do liczenia zadania prostego i odwrotnego kinematyki dla manipulatorów o szeregowej strukturze kinematycznej.
    Jeżeli chcesz obliczyć zadanie proste kinematyki wciśniej przycisk "Kinematyka prosta" z menu głównego
    Jeżeli chcesz obliczyć zadanie odwrotne kinematyki wciśnij przycisk "Kinematyka odrotna" z menu głównego

    W aplikacji do zapisu członów jest wykorzystywana notacja Denavita-Hartenberga. Dzięki niej przyjmowane są układy współrzędne oraz parametry kinematyczne.
        Jest kilka kroków dzięki którym dobrze zostanie wszsytko przyjęte: \n

        •	Osie Zi rysowane są wzdłuż osi obrotu bądź wzdłuż kierunku przesuwu; \n
        •	Oś Z dla chwytaka rysowane są równolegle do osi Z która go poprzedza;\n
        •	Umieścić środek lokalnego układu współrzędnych Oi, gdzie wspólna normalna dla osi Zi-1 i Zi przecina oś Zi;\n
        •	Przyjąć osie Xi w taki sposób aby były wspólnymi normalnymi dla osi Zi-1 i Zi;\n
        •	Odległość ai jest mierzona wzdłuż osi Xi od środka lokalnego układu współrzędnych Oi do przecięcia się osi Xi i Zi-1;\n
        •	Odległość di jest mierzona wzdłuż osi Zi od środka lokalnego układu współrzędnych  Oi-1 do przecięcia się osi Xi i Zi-1;\n
        •	Kąt αi jest mierzony między osiami Zi-1 oraz Zi wokół osi Xi;\n
        •	Kąt θi jest mierzony między osiami Xi-1 oraz Xi wokół osi Zi-1.\n

    Mając tak zadeklarowany manipulator można z łatwością wpisać odpowiednie wartości do tabelki wyświetlanej w aplikacji.\n

    </string>
</resources>
