<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_kartezjanski"
            android:title="@string/cartesian_manipulator" />
        <item
            android:id="@+id/nav_antropomorficzny"
            android:title="@string/anthropomorphic_manipulator" />
        <item
            android:id="@+id/nav_cylindryczny"
            android:title="@string/cylindrical_manipulator" />
        <item
            android:id="@+id/nav_sferyczny"
            android:title="@string/spherical_manipulator" />
        <item
            android:id="@+id/nav_scara"
            android:title="@string/scara_manipulator" />
    </group>

    <!--<item android:title="Communicate">-->
    <!--<menu>-->
    <!--<item-->
    <!--android:id="@+id/nav_share"-->
    <!--android:icon="@drawable/ic_menu_share"-->
    <!--android:title="Share" />-->
    <!--<item-->
    <!--android:id="@+id/nav_send"-->
    <!--android:icon="@drawable/ic_menu_send"-->
    <!--android:title="Send" />-->
    <!--</menu>-->
    <!--</item>-->

</menu>
